# Novomatic-Internship-Tasks

./: .gitignore  LICENSE
Task1/: CMakeLists.txt
Task1/src/: Server.cpp  Server.h  TicketMachine.cpp  TicketMachine.h
Task1/tests/: test.cpp
Task2/: CMakeLists.txt  conanfile.txt
Task2/assets/: data.json
Task2/src/: Graph.cpp  Graph.h  Node.h  main.cpp
Task3/: CMakeLists.txt
Task3/src/: LogEntry.h  LogParser.cpp  LogParser.h  QueryEngine.cpp  QueryEngine.h  main.cpp
Task3/tests/: test.cpp
